[metadata]
name = code2text_twolc
version = 0.0.1
description = Code2text grammar for hfst-twolc
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3+
license_files = LICENSE
author = Daniel Swanson
author_email = apertium@dangswan.com
home_page = https://github.com/mr-martian/code2text-twolc

[options]
install_requires =
  tree-sitter >= 0.20
  tree-sitter-apertium >= 0.1.4
  code2text >= 0.0.1

[options.entry_points]
console_scripts =
  code2text-cg = code2text_twolc:main
